Update bot state data
